# k-means-image-compression

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp
include/: App.h  Constants.h  ImageManager.h  KClusterAlgorithm.h  MainFrame.h  main_helpers.h  utils.h
include/CustomWidgets/: ImageDescriptionPanel.h  ImageDisplayPanel.h  ListColorsPanel.h
include/Frames/: BaseCompressFrame.h  CompressMultipleFrame.h  CompressSingleFrame.h  DisplayImageFrame.h  ImageOptionFrame.h  MainFrame.h
include/Frames/OptionFrames/: CompressMultipleFrame.h  CompressSingleFrame.h  DisplayImageFrame.h  ImageOptionFrame.h
src/: App.cpp  Cluster.cpp  ImageManager.cpp  KClusterAlgorithm.cpp  utils.cpp
src/CustomWidgets/: ImageDescriptionPanel.cpp  ImageDisplayPanel.cpp  ListColorsPanel.cpp
src/Frames/: BaseCompressFrame.cpp  CompressMultipleFrame.cpp  CompressSingleFrame.cpp  DisplayImageFrame.cpp  ImageOptionFrame.cpp  MainFrame.cpp
src/Frames/OptionFrames/: CompressMultipleFrame.cpp  CompressSingleFrame.cpp  DisplayImageFrame.cpp  ImageOptionFrame.cpp
